src/objects/Employer__c.object
<CustomObject>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberCreatedJobs__c</fullName>
        <label>NumberCreatedJobs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberSuccessClosedJobs__c</fullName>
        <label>NumberSuccessClosedJobs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employer</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>